tests/neg/parse_error5.scala
class Main {
  def main = {
    while true do
  }
}